--- a/Edu_Store/Edu_Store/Views/Shared/_Layout.cshtml
+++ b/Edu_Store/Edu_Store/Views/Shared/_Layout.cshtml
@@ -71,15 +71,15 @@
                     <div class="col-12 col-sm-12 col-lg-12">
                         <div class="info_wrapper">
                             <div class="contact_info">
-                                <ul class="list-unstyled">
+                                <!--<ul class="list-unstyled">
                                     <li><i class="flaticon-phone-receiver"></i>+000-2356-222</li>
                                     <li><i class="flaticon-mail-black-envelope-symbol"></i>contact@yourdomain.com</li>
-                                </ul>
+                                </ul>-->
                             </div>
                             <div class="login_info">
                                 <ul class="d-flex">
                                     <li class="nav-item"><a href="#" class="nav-link sign-in js-modal-show"><i class="flaticon-user-male-black-shape-with-plus-sign"></i>Sign Up</a></li>
-                                    <li class="nav-item"><a href="#" class="nav-link join_now js-modal-show"><i class="flaticon-padlock"></i>Lon In</a></li>
+                                    <li class="nav-item"><a href="#" class="nav-link join_now js-modal-show"><i class="flaticon-padlock"></i>Log In</a></li>
                                 </ul>
                                 <a href="#" title="" class="apply_btn">Apply Now</a>
                             </div>
@@ -111,7 +111,7 @@
                             <li class="nav-item">
                                 <a href="course.html" class="nav-link">Courses</a>
                                 <ul class="navbar-nav nav mx-auto">
-                                    <li class="nav-item"><a href="course.html" class="nav-link">Courses</a></li>
+                                    <li class="nav-item"><a asp-controller="Course" asp-action="Index" class="nav-link">Courses</a></li>
                                     <li class="nav-item"><a href="course-details.html" class="nav-link">Courses Details</a></li>
                                 </ul>
                             </li>
