--- a/Edu_Store/Edu_Store/Views/Course/Index.cshtml
+++ b/Edu_Store/Edu_Store/Views/Course/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Edu_Store.Models.Course>
+﻿@model Paginatedlist<Edu_Store.Models.Course>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
 @{
     ViewData["Title"] = "Index";
@@ -21,50 +22,14 @@
         </div>
     </div>
 
-@*<div class="intro_wrapper">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-8 col-lg-8">
-                <div class="intro_text">
-                    <h1>Courese Page</h1>
-                    <div class="pages_links">
-                        <a href="#" title="">Home</a>
-                        <a href="#" title="" class="active">Course Page</a>
-                    </div>
-                </div>
-            </div>
 
-        </div>
-    </div>
-</div>*@
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-@*<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Duration)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Teacher)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>*@
+
         <section class="popular_courses" id="popular_courses_page">
     <div class="container"> 
         <div class="row">
+         
 @foreach (var item in Model) {
     
             <div class="center col-12 col-sm-6 col-md-6 col-lg-4">
@@ -115,6 +80,18 @@
             </td>
         </tr>*@
 }
+            @{
+                var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+                var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+            }
+
+<div class="pagination_blog">
+                <ul>
+                    <li><a style="font-size:30px;position:relative;bottom:5px;right:3px" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex-1)" class="bi bi-chevron-left  @prevDisabled">@*<i class="bi bi-chevron-left" style="font-size:30px;position:relative;bottom:5px;right:3px"></i>*@</a></li>
+                    <li ><a  style="font-size:30px;position:relative;bottom:3px;right:-3px" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex+1)" class="bi bi-chevron-right  @nextDisabled">@*<i class="bi bi-chevron-right" style="font-size:30px;position:relative;bottom:55px;right:-3px"></i>*@</a></li>
+                    
+                </ul>
+            </div>       
         </div>
 
     </div>
@@ -122,3 +99,4 @@
 <!-- Ends: . -->
    @* </tbody>
 </table>*@
+
