--- a/Edu_Store/Edu_Store/Views/Home/Index.cshtml
+++ b/Edu_Store/Edu_Store/Views/Home/Index.cshtml
@@ -114,7 +114,7 @@
                      data-paddingbottom="[12,12,8,8]"
                      data-paddingleft="[40,40,30,25]"
                      style="z-index: 14; white-space: nowrap;  font-weight:500; color:#ffffff; font-family:Rubik; text-transform:uppercase; background-color:#092ace; letter-spacing:1px; border-radius: 3px;">
-            <a asp-action="viewCourses" asp-controller="Home" class="nav-link" >Veiw Courses</a>   
+            <a asp-action="viewCourses" asp-controller="Home" class="nav-link" >Veiw Your Courses</a>   
                 </div>
             </li>
 
@@ -223,7 +223,7 @@
                      data-paddingbottom="[12,12,8,8]"
                      data-paddingleft="[40,40,30,25]"
                      style="z-index: 14; white-space: nowrap;  font-weight:500; color:#ffffff; font-family:Rubik; text-transform:uppercase; background-color:#092ace; letter-spacing:1px; border-radius: 3px;">
-            <a asp-action="About" asp-controller="Home" class="nav-link" >test</a>   
+            <a asp-action="viewCourses" asp-controller="Home" class="nav-link" >Veiw Your Courses</a>   
                 </div>
             </li>
 
