--- a/Edu_Store/Edu_Store/Views/Course/Details.cshtml
+++ b/Edu_Store/Edu_Store/Views/Course/Details.cshtml
@@ -56,7 +56,11 @@
                                     <span class="courses_price">$@Model.Price</span>
                                 </div>
                                 <div class="buy_btn single_items">
-                                    <a href="#" title="">Buy Now</a>
+                                <form method="post" asp-controller="Course" asp-action="AddToCart">
+                                    <input type="hidden" name="" value="@Model.CourseID" />
+                                    <input type="submit" value="Add To Cart" style="background:#ff5a2c;font-weight:500;color:white;font-size:12px;height:36px;line-height:36px;" />
+                                </form>
+                                    @*<a href="#" title="">Buy Now</a>*@
                                 </div>
                             </div>
                         @{
