--- a/Edu_Store/Edu_Store/Views/Shared/_Layout.cshtml
+++ b/Edu_Store/Edu_Store/Views/Shared/_Layout.cshtml
@@ -97,6 +97,8 @@
                                     
 
                                 </ul>
+                               <a asp-controller="Cart" asp-action="Index"> <i class="bi bi-cart-fill" style="margin-right:20px;color:white;"></i></a>
+
                                 <a href="#" title="" class="apply_btn">Apply Now</a>
                             </div>
                         </div>
