--- a/Edu_Store/Edu_Store/Views/Course/Details.cshtml
+++ b/Edu_Store/Edu_Store/Views/Course/Details.cshtml
@@ -32,7 +32,7 @@
                             <h2>@Model.Title</h2>
                             <div class="review-option">
                                 <div class="teacher-info single_items single_items_shape">
-                                    <img src="" alt="" class="img-fluid">
+                                    @*<img src="" alt="" class="img-fluid">*@
                                     <div class="teacher-name">
                                         <span>Teacher</span>
                                         <span>@Model.TeacherID</span>
