--- a/Edu_Store/Edu_Store/Views/Course/Index.cshtml
+++ b/Edu_Store/Edu_Store/Views/Course/Index.cshtml
@@ -52,7 +52,7 @@
                                 <li><i class="fa fa-user"></i> @item.Duration Days</li>
                                 
                             </ul>
-                            <a asp-controller="Cart" asp-action="Index" class="cart_btn">Add to Cart</a>
+                                <a asp-controller="Course" asp-action="Details" asp-route-id="@item.CourseID" class="cart_btn">View Details</a>
                                 
                         </div>
                     </div>
