--- a/Edu_Store/Edu_Store/Views/Course/Details.cshtml
+++ b/Edu_Store/Edu_Store/Views/Course/Details.cshtml
@@ -58,7 +58,7 @@
                                 <div class="buy_btn single_items">
                                 <form method="post" asp-controller="Course" asp-action="AddToCart">
                                     <input type="hidden" name="courseId" value="@Model.CourseID" />
-                                    <input type="submit" value="Add To Cart" style="background:#ff5a2c;font-weight:500;color:white;font-size:12px;height:36px;line-height:36px;" />
+                                    <input type="submit" value="Add To Cart" style="background:#ff5a2c;font-weight:500;color:white;font-size:15px;height:36px;line-height:36px;width:120px;display:flex;justify-content:center;cursor:pointer;" />
                                 </form>
                                     @*<a href="#" title="">Buy Now</a>*@
                                 </div>
